--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <h1>
 <a id="cv" class="anchor" href="#cv" aria-hidden="true"><span class="octicon octicon-link"></span></a>CV</h1>
       </section>
+      <section>
+        <object type='application/pdf' src="http://gitmycode.github.io/CV/Martin_Bouchard.pdf" width="700px" height="700px">
+    <embed type='application/pdf' src="http://gitmycode.github.io/CV/Martin_Bouchard.pdf">
+    </embed>
+</object>
+      </section>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
